--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,10 @@
         <artifactId>selenium-java</artifactId>
         <version>3.8.1</version>
     </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
