--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,64 @@
+###############################################################
+# From GitHub : https://help.github.com/articles/ignoring-files
+###############################################################
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.pyc
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+#*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+#*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+
+###############################################################
+# RBC/Brushfire Additions
+###############################################################
+
+/bin
+**/bin/**
+/build
+**/build/**
+.gradle/*
+.settings/*
+**/.settings/**
+.classpath
+.project
+**/*.project
+*~
+**/#*#
 **/.idea
-**/.iml
+**/*.iml
+src/main/web/src/.tmp/**
+src/main/web/src/.gradle/**
